--- a/deploy/charts/prefect-operator/templates/kube-rbac-proxy-service.yaml
+++ b/deploy/charts/prefect-operator/templates/kube-rbac-proxy-service.yaml
@@ -1,12 +1,21 @@
-{{- if .Values.serviceAccount.create }}
+{{ if .Values.kubeRbacProxy.create -}}
 apiVersion: v1
-kind: ServiceAccount
+kind: Service
 metadata:
-  name: {{ include "operator.serviceAccountName" . }}
+  name: {{ .Values.kubeRbacProxy.name }}
   namespace: {{ include "common.names.namespace" . | quote }}
   labels: {{- include "common.labels.standard" ( dict "customLabels" .Values.commonLabels "context" $ ) | nindent 4 }}
-    app.kubernetes.io/component: operator
+    app.kubernetes.io/component: {{ .Values.kubeRbacProxy.name }}
   {{- if .Values.commonAnnotations }}
   annotations: {{- include "common.tplvalues.render" ( dict "value" .Values.commonAnnotations "context" $ ) | nindent 4 }}
   {{- end }}
+spec:
+  type: ClusterIP
+  ports:
+    - name: https
+      port: 8443
+      protocol: TCP
+      targetPort: https
+  selector:
+    app.kubernetes.io/component: operator
 {{- end }}
