--- a/deploy/charts/prefect-operator/values.yaml
+++ b/deploy/charts/prefect-operator/values.yaml
@@ -133,24 +133,40 @@ operator:
 # ## @section Other Parameters
 # ##
 
-# ## RBAC configuration
-# ##
-# rbac:
-#   ## @param rbac.create Specifies whether RBAC resources should be created
-#   ##
-#   create: false
-#   ## @param rbac.rules Custom RBAC rules to set
-#   ## e.g:
-#   ## rules:
-#   ##   - apiGroups:
-#   ##       - ""
-#   ##     resources:
-#   ##       - pods
-#   ##     verbs:
-#   ##       - get
-#   ##       - list
-#   ##
-#   rules: []
+## RBAC configuration
+rbac:
+  operator:
+    # -- specifies whether a the operator role & role binding should be created
+    create: true
+
+
+
+## TODO add some more info here
+## The kube-rbac-proxy protects your /metrics endpoint.
+## ref: https://github.com/brancz/kube-rbac-proxy
+kubeRbacProxy:
+  # -- specifies whether the kube-rbac-proxy should be deployed to the cluster
+  create: true
+  # -- the name of the kube-rbac-proxy to use
+  name: kube-rbac-proxy
+  # -- the image of the kube-rbac-proxy to use
+  image: gcr.io/kubebuilder/kube-rbac-proxy:v0.16.0
+
+
+
+
+  ## @param %%MAIN_OBJECT_BLOCK%%.sidecars Add additional sidecar containers to the %%MAIN_CONTAINER_NAME%% pods
+  ## e.g:
+  ## sidecars:
+  ##   - name: your-image-name
+  ##     image: your-image
+  ##     imagePullPolicy: Always
+  ##     ports:
+  ##       - name: portname
+  ##         containerPort: 1234
+  ##
+  sidecars: []
+
 
 ## ServiceAccount configuration
 serviceAccount:
