--- a/deploy/charts/prefect-operator/values.yaml
+++ b/deploy/charts/prefect-operator/values.yaml
@@ -6,7 +6,8 @@ fullnameOverride: prefect-operator
 # -- fully override common.names.namespace
 namespaceOverride: ""
 # -- labels to add to all deployed objects
-commonLabels: {}
+commonLabels:
+  app.kubernetes.io/component: operator
 # -- annotations to add to all deployed objects
 commonAnnotations: {}
 
@@ -178,56 +179,12 @@ kubeRbacProxy:
   image: gcr.io/kubebuilder/kube-rbac-proxy:v0.16.0
 
 
-
-# # Prometheus metrics
-# metrics:
-#   # -- enable the export of Prometheus metrics
-#   enabled: true
-# #   ## Prometheus Operator ServiceMonitor configuration
-#   serviceMonitor:
-#     # -- creates a Prometheus Operator ServiceMonitor (also requires `metrics.enabled` to be `true`)
-#     enabled: false
-#     ## @param metrics.serviceMonitor.namespace Namespace in which Prometheus is running
-#     ##
-#     namespace: ""
-#     ## @param metrics.serviceMonitor.annotations Additional custom annotations for the ServiceMonitor
-#     ##
-#     annotations: {}
-#     ## @param metrics.serviceMonitor.labels Extra labels for the ServiceMonitor
-#     ##
-#     labels: {}
-#     ## @param metrics.serviceMonitor.jobLabel The name of the label on the target service to use as the job name in Prometheus
-#     ##
-#     jobLabel: ""
-#     ## @param metrics.serviceMonitor.honorLabels honorLabels chooses the metric's labels on collisions with target labels
-#     ##
-#     honorLabels: false
-#     ## @param metrics.serviceMonitor.interval Interval at which metrics should be scraped.
-#     ## ref: https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#endpoint
-#     ## e.g:
-#     ## interval: 10s
-#     ##
-#     interval: ""
-#     ## @param metrics.serviceMonitor.scrapeTimeout Timeout after which the scrape is ended
-#     ## ref: https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#endpoint
-#     ## e.g:
-#     ## scrapeTimeout: 10s
-#     ##
-#     scrapeTimeout: ""
-#     ## @param metrics.serviceMonitor.metricRelabelings Specify additional relabeling of metrics
-#     ##
-#     metricRelabelings: []
-#     ## @param metrics.serviceMonitor.relabelings Specify general relabeling
-#     ##
-#     relabelings: []
-#     ## @param metrics.serviceMonitor.selector Prometheus instance selector labels
-#     ## ref: https://github.com/bitnami/charts/tree/main/bitnami/prometheus-operator#prometheus-configuration
-#     ## selector:
-#     ##   prometheus: my-prometheus
-#     ##
-#     selector: {}
-# ## %%SUBCHART_CONTAINER/POD_DESCRIPTION%%
-# ##
-# %%SUBCHART_NAME%%:
-#   enabled: false
-#   %%OTHER_PARAMETERS_RELATED_TO_THIS_SUBCHART%%
+## Prometheus Metrics Configuration
+## This needs to be tested
+metrics:
+  # -- enable the export of Prometheus metrics
+  enabled: false
+#   ## Prometheus Operator ServiceMonitor configuration
+  serviceMonitor:
+    # -- creates a Prometheus Operator ServiceMonitor (also requires `metrics.enabled` to be `true`)
+    enabled: false
