--- a/config/rbac/auth_proxy_client_clusterrole.yaml
+++ b/config/rbac/auth_proxy_client_clusterrole.yaml
@@ -1,3 +1,4 @@
+# this is the only file that hasn't been converted to a helm template
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
