--- a/deploy/charts/prefect-operator/Chart.yaml
+++ b/deploy/charts/prefect-operator/Chart.yaml
@@ -1,5 +1,4 @@
 apiVersion: v2
-appVersion: 2-latest
 dependencies:
   - name: common
     repository: https://charts.bitnami.com/bitnami
@@ -22,5 +21,6 @@ name: prefect-operator
 sources:
   - https://github.com/PrefectHQ/prefect-operator
 type: application
-# This version is never actually shipped. github actions will package add the appropriate version at build-time
-version: 0.0.0
+# The version and appVersion fields are set automatically by the release tool
+version: v0.0.0
+appVersion: v0.0.0
