--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,12 +6,26 @@ repos:
     rev: v4.3.0
     hooks:
       - id: check-merge-conflict
-      - id: check-yaml
-        args:
-          - --allow-multiple-documents
       - id: detect-private-key
       - id: no-commit-to-branch
       - id: trailing-whitespace
+
+  - repo: https://github.com/rhysd/actionlint
+    rev: v1.7.1
+    hooks:
+      - id: actionlint
+
+  - repo: https://github.com/norwoodj/helm-docs
+    rev: v1.11.0
+    hooks:
+      - id: helm-docs
+        args:
+          - --template-files=README.md.gotmpl
+
+  - repo: https://github.com/gruntwork-io/pre-commit
+    rev: v0.1.17
+    hooks:
+      - id: helmlint
 
   - repo: https://github.com/adrienverge/yamllint.git
     rev: v1.28.0
@@ -19,8 +33,3 @@ repos:
       - id: yamllint
         args:
           - --strict
-
-  - repo: https://github.com/rhysd/actionlint
-    rev: v1.7.1
-    hooks:
-      - id: actionlint
