--- a/.github/linters/operator-ct.yaml
+++ b/.github/linters/operator-ct.yaml
@@ -4,5 +4,5 @@ charts:
 chart-repos:
   - bitnami=https://charts.bitnami.com/bitnami
 helm-extra-args: --timeout 60s
-namespace: prefect-operator
+namespace: prefect-system
 release-label: prefect-operator
