--- a/.github/linters/operator-ct.yaml
+++ b/.github/linters/operator-ct.yaml
@@ -1,6 +1,6 @@
 # See https://github.com/helm/chart-testing#configuration
 charts:
-  - deploy/charts/prefect-operator
+  - charts/prefect-operator
 chart-repos:
   - bitnami=https://charts.bitnami.com/bitnami
 helm-extra-args: --timeout 60s
