--- a/.github/linters/operator-ct.yaml
+++ b/.github/linters/operator-ct.yaml
@@ -1,8 +1,7 @@
 # See https://github.com/helm/chart-testing#configuration
 charts:
-  - charts/prefect-operator
+  - deploy/charts/prefect-operator
 chart-repos:
   - bitnami=https://charts.bitnami.com/bitnami
 helm-extra-args: --timeout 60s
-namespace: prefect-system
 release-label: prefect-operator
