--- a/.github/workflows/helm-release.yaml
+++ b/.github/workflows/helm-release.yaml
@@ -33,7 +33,7 @@ jobs:
           echo "OPERATOR_VERSION=$(\
           git ls-remote --tags --refs --sort="v:refname" \
           origin '[0-9].[0-9].[0-9]' | tail -n1 | sed 's/.*\///'
-          )" >> $GITHUB_OUTPUT"
+          )" >> $GITHUB_OUTPUT
 
       - name: Configure Git
         run: |
