Add Golang linting to pre-commit
This is a copy of what we use in our Terraform Provider repo, but we can
add/remove/tweak any of these per the documentation at
https://github.com/dnephin/pre-commit-golang.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,3 +33,14 @@ repos:
       - id: yamllint
         args:
           - --strict
+
+  - repo: https://github.com/dnephin/pre-commit-golang
+    rev: v0.5.1
+    hooks:
+      - id: go-fmt
+      - id: go-vet
+      - id: go-imports
+      - id: validate-toml
+      - id: golangci-lint
+      - id: go-unit-tests
+      - id: go-mod-tidy
