--- a/.github/workflows/helm-release.yaml
+++ b/.github/workflows/helm-release.yaml
@@ -32,7 +32,7 @@ jobs:
           # This ensures that the latest tag we grab will be of the operator image, and not the helm chart
           echo "OPERATOR_VERSION=$(\
           git ls-remote --tags --refs --sort="v:refname" \
-          origin '[0-9].[0-9].[0-9]' | tail -n1 | sed 's/.*\///'
+          origin 'v[0-9].[0-9].[0-9]' | tail -n1 | sed 's/.*\///'
           )" >> $GITHUB_OUTPUT
 
       - name: Configure Git
