chore: update workflow to pull tag versions prepended with `v` (#85)
* add v

* remove back quotes

---------

Co-authored-by: jamie zieziula <jamie.zieziula@gmail.com>

--- a/.github/workflows/helm-release.yaml
+++ b/.github/workflows/helm-release.yaml
@@ -32,7 +32,7 @@ jobs:
           # This ensures that the latest tag we grab will be of the operator image, and not the helm chart
           echo "OPERATOR_VERSION=$(\
           git ls-remote --tags --refs --sort="v:refname" \
-          origin '[0-9].[0-9].[0-9]' | tail -n1 | sed 's/.*\///'
+          origin 'v[0-9].[0-9].[0-9]' | tail -n1 | sed 's/.*\///'
           )" >> $GITHUB_OUTPUT
 
       - name: Configure Git
@@ -103,7 +103,7 @@ jobs:
         run: |
           gh release create $RELEASE_VERSION \
             --latest=false \
-            --notes "Packaged with `prefect-operator` version \
+            --notes "Packaged with prefect-operator version \
             [$OPERATOR_VERSION](https://github.com/PrefectHQ/prefect-operator/releases/tag/$OPERATOR_VERSION)"
         env:
           GITHUB_TOKEN: ${{ github.token }}
