--- a/.mise.toml
+++ b/.mise.toml
@@ -12,3 +12,7 @@ kustomize = '5.3.0'
 pre-commit = '3.8.0'
 setup-envtest = '0.17.0'
 yamllint = '1.35.1'
+
+# tomlv does not currently have an entry in the registry.
+# For now, install with `go`:
+# go install github.com/BurntSushi/toml/cmd/tomlv@latest
