--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,3 +33,18 @@ repos:
       - id: yamllint
         args:
           - --strict
+
+  - repo: https://github.com/dnephin/pre-commit-golang
+    rev: v0.5.1
+    hooks:
+      - id: go-fmt
+      # This one doesn't work because no Go files are in the root.
+      # See https://github.com/dnephin/pre-commit-golang/issues/30
+      # - id: go-vet
+      - id: go-imports
+      - id: validate-toml
+      - id: golangci-lint
+      # We already run unit tests in tests.yaml, which ensures
+      # they're called properly by using the `make` target.
+      # - id: go-unit-tests
+      - id: go-mod-tidy
