--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -47,6 +47,14 @@ jobs:
       - name: Package CRDs
         run: |
           cat deploy/charts/prefect-operator/crds/*.yaml > prefect-crds.yaml
+          helm template prefect-operator deploy/charts/prefect-operator \
+          --include-crds --set operator.image.tag=${{ github.ref_name }} \
+          > prefect-operator.yaml
+          yq -i 'del(.metadata.labels."app.kubernetes.io/managed-by")' prefect-operator.yaml
+          yq -i 'del(.metadata.labels."helm.sh/chart")' prefect-operator.yaml
+          yq -i 'del(.spec.template.metadata.labels."app.kubernetes.io/managed-by")' prefect-operator.yaml
+          yq -i 'del(.spec.template.metadata.labels."helm.sh/chart")' prefect-operator.yaml
+          yq -i '.metadata.labels."app.kubernetes.io/version" = ${{ github.ref_name }}"' prefect-operator.yaml
 
       - name: Upload release assets
         if: github.ref_type == 'tag'
