add prefectoperator as an artifact

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -61,7 +61,7 @@ jobs:
         if: github.ref_type == 'tag'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh release upload ${{ github.ref_name }} prefect-crds.yaml
+        run: gh release upload ${{ github.ref_name }} prefect-crds.yaml prefect-operator.yaml
 
   build-and-push-docker-image:
     needs: unit-tests
