--- a/.github/workflows/helm-unittest.yaml
+++ b/.github/workflows/helm-unittest.yaml
@@ -3,7 +3,12 @@
 
 name: Run Helm unit tests
 
-"on": pull_request
+"on":
+  pull_request:
+    branches:
+      - main
+    paths:
+      - deploy/charts/**
 
 # Do not grant jobs any permissions by default
 permissions: {}
