add workflow call as allowed event

--- a/.github/workflows/helm-release.yaml
+++ b/.github/workflows/helm-release.yaml
@@ -2,7 +2,8 @@
 name: prefect-operator Helm Chart release
 
 "on":
-  workflow_dispatch:
+  workflow_dispatch: {}
+  workflow_call: {}
 
 permissions: {}
 
