--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,7 +14,7 @@ name: Release Prefect Operator
 permissions: {}
 
 jobs:
-  unit-tests:
+  unit_tests:
     name: Unit tests
     runs-on: ubuntu-latest
     permissions:
@@ -34,7 +34,7 @@ jobs:
 
   build_and_upload_manifests:
     if: github.ref_type == 'tag'
-    needs: unit-tests
+    needs: unit_tests
     permissions:
       contents: write
     runs-on: ubuntu-latest
@@ -68,7 +68,7 @@ jobs:
         run: gh release upload ${{ github.ref_name }} prefect-crds.yaml prefect-operator.yaml
 
   build_and_push_docker_image:
-    needs: unit-tests
+    needs: unit_tests
     runs-on: ubuntu-latest
     # The GitHub environments are created by Terraform and map to Docker Hub repositories:
     # - dev: https://hub.docker.com/r/prefecthq/prefect-operator-dev
