--- a/.github/workflows/helm-release.yaml
+++ b/.github/workflows/helm-release.yaml
@@ -102,7 +102,7 @@ jobs:
 
       - name: Create Github Release + Tag
         run: |
-          gh release create "${RELEASE_VERSION}" \
+          gh release create -t "${RELEASE_VERSION}" \
             --latest=false \
             --notes "Packaged with prefect-operator version \
             [${OPERATOR_VERSION}](https://github.com/PrefectHQ/prefect-operator/releases/tag/${OPERATOR_VERSION})"
