--- a/.mise.toml
+++ b/.mise.toml
@@ -11,5 +11,6 @@ kubectl = '1.31'
 kustomize = '5.3.0'
 pre-commit = '3.8.0'
 setup-envtest = '0.17.0'
+shellcheck = '0.10.0'
 yamllint = '1.35.1'
 yq = '4.44.3'
