--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,14 @@ repos:
     rev: v1.7.1
     hooks:
       - id: actionlint
+        args:
+          - -shellcheck=
+
+  - repo: https://github.com/koalaman/shellcheck-precommit
+    rev: v0.7.2
+    hooks:
+      - id: shellcheck
+        args: ["--severity=error"]
 
   - repo: https://github.com/norwoodj/helm-docs
     rev: v1.11.0
