Manage goimports with mise
Mise allows you to use an experimental feature called "go backend",
which will make our tool dependency resolution more consistent.

Related to https://linear.app/prefect/issue/PLA-289/cycle-2-catch-all

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,6 +25,8 @@ jobs:
 
       - name: Install tool dependencies
         uses: jdx/mise-action@v2
+        with:
+          experimental: true
 
       - name: Build
         run: make build
@@ -44,6 +46,8 @@ jobs:
 
       - name: Install tool dependencies
         uses: jdx/mise-action@v2
+        with:
+          experimental: true
 
       - name: Package kubernetes manifests & CRDs
         run: |
