--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,29 +14,11 @@ name: Release Prefect Operator
 permissions: {}
 
 jobs:
-  unit_tests:
-    name: Unit tests
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v4
-
-      - name: Install tool dependencies
-        uses: jdx/mise-action@v2
-        with:
-          experimental: true
-
-      - name: Build
-        run: make build
-
-      - name: Test
-        run: make test
+  run_unit_tests:
+    uses: ./.github/workflows/tests.yaml
 
   build_and_upload_manifests:
     if: github.ref_type == 'tag'
-    needs: unit_tests
     permissions:
       contents: write
     runs-on: ubuntu-latest
@@ -72,7 +54,6 @@ jobs:
         run: gh release upload ${{ github.ref_name }} prefect-crds.yaml prefect-operator.yaml
 
   build_and_push_docker_image:
-    needs: unit_tests
     runs-on: ubuntu-latest
     # The GitHub environments are created by Terraform and map to Docker Hub repositories:
     # - dev: https://hub.docker.com/r/prefecthq/prefect-operator-dev
