add neccessary permissions

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -101,6 +101,8 @@ jobs:
 
   create_helm_release:
     if: github.ref_type == 'tag'
+    permissions:
+      contents: write
     needs: build_and_push_docker_image
     uses: ./.github/workflows/helm-release.yaml
     secrets: inherit
