Automate Helm Chart release on `operator` release (#97)
* linting, automate hc release, drop unneccessary code

* only do this on tag

* break out unit tests to their own file

* add neccessary permissions

* grant permissions to unit test job

* fix indents

* fix whitespacing

* remove docker builds on prs

* only call tests from release file for now

* drop permissions on static-analysis workflow

* more linting

---------

Co-authored-by: jamie zieziula <jamie.zieziula@gmail.com>

--- a/.github/workflows/static-analysis.yaml
+++ b/.github/workflows/static-analysis.yaml
@@ -2,7 +2,9 @@
 name: Static analysis
 
 "on":
-  pull_request:
+  pull_request: {}
+
+permissions: {}
 
 # Limit concurrency by workflow/branch combination.
 #
@@ -18,9 +20,12 @@ concurrency:
   cancel-in-progress: ${{ github.event_name == 'pull_request' }}
 
 jobs:
-  pre-commit-checks:
+  pre_commit_checks:
     name: pre-commit checks
     runs-on: ubuntu-latest
+    permissions:
+      # required to read from the repo
+      contents: read
     steps:
       - uses: actions/checkout@v4
         with:
