--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,5 +1,5 @@
 ---
-name: prefect-operator release
+name: Release Prefect Operator
 
 "on":
   push:
@@ -14,30 +14,16 @@ name: prefect-operator release
 permissions: {}
 
 jobs:
-  unit-tests:
-    name: Unit tests
-    runs-on: ubuntu-latest
+  run_unit_tests:
+    uses: ./.github/workflows/tests.yaml
     permissions:
+      # required by downstream jobs
       contents: read
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v4
 
-      - name: Install tool dependencies
-        uses: jdx/mise-action@v2
-        with:
-          experimental: true
-
-      - name: Build
-        run: make build
-
-      - name: Test
-        run: make test
-
-  build-and-upload-manifests:
+  build_and_upload_manifests:
     if: github.ref_type == 'tag'
-    needs: unit-tests
     permissions:
+      # required to write artifacts to a release
       contents: write
     runs-on: ubuntu-latest
     steps:
@@ -67,12 +53,9 @@ jobs:
           yq -i '(.. | select(tag == "!!str" and . == "v0.0.0")) |= "${{ github.ref_name }}"' prefect-operator.yaml
 
       - name: Upload release assets
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: gh release upload ${{ github.ref_name }} prefect-crds.yaml prefect-operator.yaml
 
-  build-and-push-docker-image:
-    needs: unit-tests
+  build_and_push_docker_image:
     runs-on: ubuntu-latest
     # The GitHub environments are created by Terraform and map to Docker Hub repositories:
     # - dev: https://hub.docker.com/r/prefecthq/prefect-operator-dev
@@ -117,3 +100,11 @@ jobs:
           push: true
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
+
+  create_helm_release:
+    if: github.ref_type == 'tag'
+    permissions:
+      # required by downstream jobs
+      contents: write
+    needs: build_and_push_docker_image
+    uses: ./.github/workflows/helm-release.yaml
